remove admin endpoints
